Création VrGameModeBase BluePrint Création VRPawn Ajout de motions controller au VRPawn

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Level/VrMap.VrMap
 GameDefaultMap=/Game/Level/VrMap.VrMap
-GlobalDefaultGameMode="/Script/FeaturesVR_M_Ludus_S.FeaturesVR_M_Ludus_SGameMode"
+GlobalDefaultGameMode=/Game/Blueprint/GameModeBaseVR.GameModeBaseVR_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
